Add directory download/upload for circuit example

--- a/examples/04_circuit.ipynb
+++ b/examples/04_circuit.ipynb
@@ -8,7 +8,8 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "\n",
+    "import tempfile\n",
+    "from pathlib import Path\n",
     "from rich import print as rprint\n",
     "\n",
     "from entitysdk import Client, ProjectContext, models\n",
@@ -53,7 +54,7 @@
    "id": "5a68b30e-bad6-43cc-8c87-0eeb373232b5",
    "metadata": {},
    "source": [
-    "## Create circuit model"
+    "## Register circuit model"
    ]
   },
   {
@@ -66,7 +67,7 @@
     "brain_region = client.search_entity(entity_type=models.BrainRegion, query={\"acronym\": \"CB\"}).first()\n",
     "\n",
     "\n",
-    "circuit = models.Circuit(\n",
+    "circuit = client.register_entity(models.Circuit(\n",
     "    name=\"my-circuit\",\n",
     "    description=\"my-circuit\",\n",
     "    subject=subject,\n",
@@ -76,35 +77,96 @@
     "    number_connections=10,\n",
     "    scale=\"microcircuit\",\n",
     "    build_category=\"em_reconstruction\",\n",
-    ")"
+    "))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b7a23d69-b901-45f1-a7f3-f1769bbc9a2d",
+   "id": "4eb6d2ce-1d03-4ff0-8cef-372fa8022030",
    "metadata": {},
    "source": [
-    "## Register circuit"
+    "## Upload circuit directory"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "013f9698-978d-48e4-ae98-a9b5f1e1dd31",
+   "id": "2e46d59e-a43e-427d-8f33-9cb253a5f5af",
    "metadata": {},
    "outputs": [],
    "source": [
-    "registered_circuit = client.register_entity(circuit)"
+    "directory_asset = client.upload_directory(\n",
+    "    entity_id=circuit.id,\n",
+    "    entity_type=models.Circuit,\n",
+    "    directory_or_paths=Path(\"./test-dir\"),\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99fbda19-329e-4270-8380-f6afc168d758",
+   "id": "463df0ed-fed6-4a0c-9bba-5f82e0e0728d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "rprint(registered_circuit)"
+    "rprint(directory_asset)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "139117a8-da4a-4b2f-a7cf-694fb7fc5839",
+   "metadata": {},
+   "source": [
+    "## List circuit directory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8b862084-5dd6-4b90-aa02-b87534e34f46",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "files = client.list_directory(\n",
+    "    entity_id=circuit.id,\n",
+    "    entity_type=models.Circuit,\n",
+    "    asset_id=directory_asset.id\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "649eacb0-2102-4bff-a454-d2202e0f991b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rprint(files)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "42f528a1-7d94-4b7f-8cba-17ef3cb06022",
+   "metadata": {},
+   "source": [
+    "## Download circuit directory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "390b643d-0458-4e9c-a52a-bedab4944c94",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with tempfile.TemporaryDirectory() as tdir:\n",
+    "    client.download_directory(\n",
+    "        entity_id=circuit.id,\n",
+    "        entity_type=models.Circuit,\n",
+    "        asset_id=directory_asset.id,\n",
+    "        output_path=Path(tdir)\n",
+    "    )\n",
+    "    rprint(list(Path(tdir).iterdir()))"
    ]
   },
   {
@@ -122,7 +184,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fetched = client.get_entity(entity_id=registered_circuit.id, entity_type=models.Circuit)"
+    "fetched = client.get_entity(entity_id=circuit.id, entity_type=models.Circuit)"
    ]
   },
   {
@@ -134,14 +196,6 @@
    "source": [
     "rprint(fetched)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f359b797-02ad-4358-bef7-ad3f3008d323",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
