--- a/examples/04_simulation_campaign.ipynb
+++ b/examples/04_simulation_campaign.ipynb
@@ -89,12 +89,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "campaign = client.register_entity(models.SimulationCampaign(\n",
-    "    name=\"my-campaign\",\n",
-    "    description=\"my-campaign-description\",\n",
-    "    entity_id=circuit.id,\n",
-    "    scan_parameters={\"foo\": \"bar\"},\n",
-    "))\n",
+    "campaign = client.register_entity(\n",
+    "    models.SimulationCampaign(\n",
+    "        name=\"my-campaign\",\n",
+    "        description=\"my-campaign-description\",\n",
+    "        entity_id=circuit.id,\n",
+    "        scan_parameters={\"foo\": \"bar\"},\n",
+    "    )\n",
+    ")\n",
     "\n",
     "simulations = [\n",
     "    client.register_entity(\n",
@@ -129,11 +131,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "simulation_generation = client.register_entity(models.SimulationGeneration(\n",
-    "    start_time=datetime.now(UTC),\n",
-    "    used=[campaign],\n",
-    "    generated=simulations,\n",
-    "))\n",
+    "simulation_generation = client.register_entity(\n",
+    "    models.SimulationGeneration(\n",
+    "        start_time=datetime.now(UTC),\n",
+    "        used=[campaign],\n",
+    "        generated=simulations,\n",
+    "    )\n",
+    ")\n",
     "\n",
     "simulation_executions = [\n",
     "    client.register_entity(\n",
@@ -182,12 +186,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "campaign = client.register_entity(models.SimulationCampaign(\n",
-    "    name=\"my-campaign\",\n",
-    "    description=\"my-campaign-description\",\n",
-    "    entity_id=circuit.id,\n",
-    "    scan_parameters={\"foo\": \"bar\"},\n",
-    "))"
+    "campaign = client.register_entity(\n",
+    "    models.SimulationCampaign(\n",
+    "        name=\"my-campaign\",\n",
+    "        description=\"my-campaign-description\",\n",
+    "        entity_id=circuit.id,\n",
+    "        scan_parameters={\"foo\": \"bar\"},\n",
+    "    )\n",
+    ")"
    ]
   },
   {
@@ -205,10 +211,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sim_generation = client.register_entity(models.SimulationGeneration(\n",
-    "    start_time=datetime.now(UTC),\n",
-    "    used=[campaign],\n",
-    "))"
+    "sim_generation = client.register_entity(\n",
+    "    models.SimulationGeneration(\n",
+    "        start_time=datetime.now(UTC),\n",
+    "        used=[campaign],\n",
+    "    )\n",
+    ")"
    ]
   },
   {
