--- a/examples/02_morphology.ipynb
+++ b/examples/02_morphology.ipynb
@@ -19,11 +19,14 @@
     "from entitysdk.models import (\n",
     "    BrainLocation,\n",
     "    BrainRegion,\n",
+    "    Contribution,\n",
     "    MTypeClass,\n",
+    "    MTypeClassification,\n",
+    "    Organization,\n",
     "    ReconstructionMorphology,\n",
+    "    Role,\n",
     "    Species,\n",
     "    Strain,\n",
-    "    MTypeClassification,\n",
     ")"
    ]
   },
@@ -205,9 +208,7 @@
     "mtype = client.search_entity(entity_type=MTypeClass, query={\"pref_label\": \"L5_PC\"}).one()\n",
     "\n",
     "mtype_classification = MTypeClassification(\n",
-    "    mtype_class_id=mtype.id,\n",
-    "    entity_id=registered.id,\n",
-    "    authorized_public=True\n",
+    "    mtype_class_id=mtype.id, entity_id=registered.id, authorized_public=True\n",
     ")\n",
     "\n",
     "mtype_classification = client.register_entity(mtype_classification)"
@@ -377,9 +378,7 @@
     "\n",
     "rprint(deleted_asset)\n",
     "\n",
-    "fetched = client.get_entity(\n",
-    "    entity_id=registered.id, entity_type=ReconstructionMorphology\n",
-    ")\n",
+    "fetched = client.get_entity(entity_id=registered.id, entity_type=ReconstructionMorphology)\n",
     "rprint(fetched.assets)"
    ]
   },
