--- a/examples/04_simulation_campaign.ipynb
+++ b/examples/04_simulation_campaign.ipynb
@@ -80,7 +80,9 @@
    "outputs": [],
    "source": [
     "campaign = models.SimulationCampaign(\n",
-    "    name=\"my-campaign\", description=\"my-campaign-description\", scan_parameters={\"foo\": \"bar\"},\n",
+    "    name=\"my-campaign\",\n",
+    "    description=\"my-campaign-description\",\n",
+    "    scan_parameters={\"foo\": \"bar\"},\n",
     "    entity_id=circuit.id,\n",
     ")\n",
     "campaign = client.register_entity(campaign)"
