--- a/examples/03_circuit.ipynb
+++ b/examples/03_circuit.ipynb
@@ -9,8 +9,10 @@
    "source": [
     "import os\n",
     "import tempfile\n",
+    "from pathlib import Path\n",
     "\n",
     "from rich import print as rprint\n",
+    "from utils import create_mock_circuit_dir\n",
     "\n",
     "from entitysdk import Client, ProjectContext, models\n",
     "\n",
@@ -123,12 +125,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "directory_asset = client.upload_directory(\n",
-    "    entity_id=circuit.id,\n",
-    "    entity_type=models.Circuit,\n",
-    "    name=\"circuit\",\n",
-    "    directory_or_paths=Path(\"./test-dir\"),\n",
-    ")"
+    "with tempfile.TemporaryDirectory() as tdir:\n",
+    "    # create a hierarchy of files to upload\n",
+    "    create_mock_circuit_dir(tdir)\n",
+    "\n",
+    "    files = list(Path(tdir).iterdir())\n",
+    "\n",
+    "    files = {str(path.relative_to(tdir)): path for path in Path(tdir).rglob(\"*\") if path.is_file()}\n",
+    "\n",
+    "    directory_asset = client.upload_directory(\n",
+    "        entity_id=registered_circuit.id,\n",
+    "        entity_type=models.Circuit,\n",
+    "        name=\"circuit\",\n",
+    "        paths=files,\n",
+    "    )"
    ]
   },
   {
@@ -147,9 +157,7 @@
    "outputs": [],
    "source": [
     "files = client.list_directory(\n",
-    "    entity_id=circuit.id,\n",
-    "    entity_type=models.Circuit,\n",
-    "    asset_id=directory_asset.id\n",
+    "    entity_id=registered_circuit.id, entity_type=models.Circuit, asset_id=directory_asset.id\n",
     ")"
    ]
   },
@@ -180,12 +188,13 @@
    "source": [
     "with tempfile.TemporaryDirectory() as tdir:\n",
     "    client.download_directory(\n",
-    "        entity_id=circuit.id,\n",
+    "        entity_id=registered_circuit.id,\n",
     "        entity_type=models.Circuit,\n",
     "        asset_id=directory_asset.id,\n",
-    "        output_path=Path(tdir)\n",
+    "        output_path=Path(tdir),\n",
     "    )\n",
-    "    rprint(list(Path(tdir).iterdir()))"
+    "    files = {str(path.relative_to(tdir)): path for path in Path(tdir).rglob(\"*\") if path.is_file()}\n",
+    "    rprint(files)"
    ]
   },
   {
