--- a/examples/03_circuit.ipynb
+++ b/examples/03_circuit.ipynb
@@ -8,8 +8,11 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "import tempfile\n",
+    "from pathlib import Path\n",
     "\n",
     "from rich import print as rprint\n",
+    "from utils import create_mock_circuit_dir\n",
     "\n",
     "from entitysdk import Client, ProjectContext, models\n",
     "\n",
@@ -109,6 +112,91 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c3ff25a9-fc61-4c19-8949-140c1dd33af7",
+   "metadata": {},
+   "source": [
+    "## Upload directory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3dccd413-f91b-42b1-8efe-56d01f68ddd0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with tempfile.TemporaryDirectory() as tdir:\n",
+    "    # create a hierarchy of files to upload\n",
+    "    create_mock_circuit_dir(tdir)\n",
+    "\n",
+    "    files = {str(path.relative_to(tdir)): path for path in Path(tdir).rglob(\"*\") if path.is_file()}\n",
+    "\n",
+    "    directory_asset = client.upload_directory(\n",
+    "        entity_id=registered_circuit.id,\n",
+    "        entity_type=models.Circuit,\n",
+    "        name=\"circuit\",\n",
+    "        paths=files,\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6ad6ce94-ad74-4710-b274-1883fdeb41f5",
+   "metadata": {},
+   "source": [
+    "## List directory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3b0d302e-46fe-4d97-b221-99833975eede",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "files = client.list_directory(\n",
+    "    entity_id=registered_circuit.id, entity_type=models.Circuit, asset_id=directory_asset.id\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "749b85d2-dbce-455b-9ade-fec7e17f7208",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rprint(files)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aad97379-3010-42c9-9fc5-f30101163f1c",
+   "metadata": {},
+   "source": [
+    "## Download directory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ace27230-6dfa-4bc6-8b2c-33998a22a111",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with tempfile.TemporaryDirectory() as tdir:\n",
+    "    client.download_directory(\n",
+    "        entity_id=registered_circuit.id,\n",
+    "        entity_type=models.Circuit,\n",
+    "        asset_id=directory_asset.id,\n",
+    "        output_path=Path(tdir),\n",
+    "    )\n",
+    "    files = {str(path.relative_to(tdir)): path for path in Path(tdir).rglob(\"*\") if path.is_file()}\n",
+    "    rprint(files)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8bf620b4-fafc-4476-a719-bbe6e7a821bf",
    "metadata": {},
    "source": [
@@ -134,19 +222,25 @@
    "source": [
     "rprint(fetched)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f359b797-02ad-4358-bef7-ad3f3008d323",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
