--- a/examples/02_morphology.ipynb
+++ b/examples/02_morphology.ipynb
@@ -276,7 +276,8 @@
     "        entity_id=registered.id,\n",
     "        entity_type=ReconstructionMorphology,\n",
     "        file_path=file1,\n",
-    "        file_content_type=\"application/h5\",\n",
+    "        file_content_type=\"application/x-hdf5\",\n",
+    "        asset_label=\"hdf5\",\n",
     "    )\n",
     "    rprint(asset1)\n",
     "\n",
@@ -289,6 +290,7 @@
     "        file_content=buffer,\n",
     "        file_name=\"buffer.h5\",\n",
     "        file_content_type=\"application/swc\",\n",
+    "        asset_label=\"swc\",\n",
     "    )\n",
     "    rprint(asset2)"
    ]
@@ -408,8 +410,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
