Fix httpx request and notebook 02

--- a/examples/02_morphology.ipynb
+++ b/examples/02_morphology.ipynb
@@ -277,7 +277,7 @@
     "        entity_type=ReconstructionMorphology,\n",
     "        file_path=file1,\n",
     "        file_content_type=\"application/x-hdf5\",\n",
-    "        asset_label=\"hdf5\",\n",
+    "        asset_label=\"morphology\",\n",
     "    )\n",
     "    rprint(asset1)\n",
     "\n",
@@ -288,9 +288,9 @@
     "        entity_id=registered.id,\n",
     "        entity_type=ReconstructionMorphology,\n",
     "        file_content=buffer,\n",
-    "        file_name=\"buffer.h5\",\n",
+    "        file_name=\"buffer.swc\",\n",
     "        file_content_type=\"application/swc\",\n",
-    "        asset_label=\"swc\",\n",
+    "        asset_label=\"morphology\",\n",
     "    )\n",
     "    rprint(asset2)"
    ]
@@ -332,7 +332,7 @@
     "downloaded = client.download_assets(\n",
     "    fetched,\n",
     "    selection={\"content_type\": \"application/swc\"},\n",
-    "    output_path=\"./my-file.h5\",\n",
+    "    output_path=\"./my-file.swc\",\n",
     ").one()\n",
     "\n",
     "content = client.download_content(\n",
@@ -406,6 +406,33 @@
    "outputs": [],
    "source": [
     "rprint(hits[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0cea5392",
+   "metadata": {},
+   "source": [
+    "## Register an existing data from an external cloud storage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "2c2718ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# existing = client.register_asset(\n",
+    "#     entity_id=registered.id,\n",
+    "#     entity_type=ReconstructionMorphology,\n",
+    "#     name=\"my-morphology.h5\",\n",
+    "#     storage_path=\"path/to/morph.h5\",\n",
+    "#     storage_type=\"aws_s3_open\",\n",
+    "#     is_directory=False,\n",
+    "#     content_type=\"application/x-hdf5\",\n",
+    "#     asset_label=\"morphology\",\n",
+    "# )"
    ]
   }
  ],
