--- a/examples/02_morphology.ipynb
+++ b/examples/02_morphology.ipynb
@@ -413,17 +413,18 @@
    "id": "0cea5392",
    "metadata": {},
    "source": [
-    "## Register an existing data from an external cloud storage"
+    "## Register existing data from an external cloud storage"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "2c2718ce",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# existing = client.register_asset(\n",
+    "## register a file\n",
+    "# asset = client.register_asset(\n",
     "#     entity_id=registered.id,\n",
     "#     entity_type=ReconstructionMorphology,\n",
     "#     name=\"my-morphology.h5\",\n",
@@ -434,11 +435,31 @@
     "#     asset_label=\"morphology\",\n",
     "# )"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bdbe30f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## register a directory\n",
+    "# asset = client.register_asset(\n",
+    "#     entity_id=registered.id,\n",
+    "#     entity_type=Circuit,\n",
+    "#     name=\"sonata_circuit\",\n",
+    "#     storage_path=\"path/to/circuit/directory\",\n",
+    "#     storage_type=\"aws_s3_open\",\n",
+    "#     is_directory=True,\n",
+    "#     content_type=\"application/vnd.directory\",\n",
+    "#     asset_label=\"sonata_circuit\",\n",
+    "# )"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "entitysdk",
    "language": "python",
    "name": "python3"
   },
@@ -452,7 +473,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
