Update Cell Morphology model

--- a/examples/01_searching.ipynb
+++ b/examples/01_searching.ipynb
@@ -17,7 +17,7 @@
     "    MTypeClass,\n",
     "    Organization,\n",
     "    Person,\n",
-    "    ReconstructionMorphology,\n",
+    "    CellMorphology,\n",
     "    Role,\n",
     "    Species,\n",
     "    Strain,\n",
@@ -228,7 +228,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "morphs = client.search_entity(entity_type=ReconstructionMorphology, limit=10).all()"
+    "morphs = client.search_entity(entity_type=CellMorphology, limit=10).all()"
    ]
   },
   {
@@ -258,7 +258,7 @@
    "outputs": [],
    "source": [
     "morphs = client.search_entity(\n",
-    "    entity_type=ReconstructionMorphology, query={\"mtype__pref_label\": \"SR_PC\"}\n",
+    "    entity_type=CellMorphology, query={\"mtype__pref_label\": \"SR_PC\"}\n",
     ").all()"
    ]
   },
@@ -283,8 +283,14 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "entitysdk",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
