--- a/examples/02_morphology.ipynb
+++ b/examples/02_morphology.ipynb
@@ -23,7 +23,7 @@
     "    MTypeClass,\n",
     "    MTypeClassification,\n",
     "    Organization,\n",
-    "    ReconstructionMorphology,\n",
+    "    CellMorphology,\n",
     "    Role,\n",
     "    Species,\n",
     "    Strain,\n",
@@ -150,7 +150,7 @@
     "    y=1173.8499755859375,\n",
     "    z=4744.60009765625,\n",
     ")\n",
-    "morphology = ReconstructionMorphology(\n",
+    "morphology = CellMorphology(\n",
     "    name=\"my-morph\",\n",
     "    description=\"A morphology\",\n",
     "    species=species,\n",
@@ -274,7 +274,7 @@
     "    # use a filepath to register first asset\n",
     "    asset1 = client.upload_file(\n",
     "        entity_id=registered.id,\n",
-    "        entity_type=ReconstructionMorphology,\n",
+    "        entity_type=CellMorphology,\n",
     "        file_path=file1,\n",
     "        file_content_type=\"application/x-hdf5\",\n",
     "        asset_label=\"morphology\",\n",
@@ -286,7 +286,7 @@
     "\n",
     "    asset2 = client.upload_content(\n",
     "        entity_id=registered.id,\n",
-    "        entity_type=ReconstructionMorphology,\n",
+    "        entity_type=CellMorphology,\n",
     "        file_content=buffer,\n",
     "        file_name=\"buffer.swc\",\n",
     "        file_content_type=\"application/swc\",\n",
@@ -311,7 +311,7 @@
    "outputs": [],
    "source": [
     "# with assets and mtypes\n",
-    "fetched = client.get_entity(entity_id=registered.id, entity_type=ReconstructionMorphology)"
+    "fetched = client.get_entity(entity_id=registered.id, entity_type=CellMorphology)"
    ]
   },
   {
@@ -370,7 +370,7 @@
     "\n",
     "rprint(deleted_asset)\n",
     "\n",
-    "fetched = client.get_entity(entity_id=registered.id, entity_type=ReconstructionMorphology)\n",
+    "fetched = client.get_entity(entity_id=registered.id, entity_type=CellMorphology)\n",
     "rprint(fetched.assets)"
    ]
   },
@@ -390,7 +390,7 @@
    "outputs": [],
    "source": [
     "hits = client.search_entity(\n",
-    "    entity_type=ReconstructionMorphology,\n",
+    "    entity_type=CellMorphology,\n",
     "    query={\"name__ilike\": \"my-morph\", \"page\": 1, \"page_size\": 2},\n",
     "    limit=None,\n",
     ").all()\n",
@@ -426,7 +426,7 @@
     "## register a file\n",
     "# asset = client.register_asset(\n",
     "#     entity_id=registered.id,\n",
-    "#     entity_type=ReconstructionMorphology,\n",
+    "#     entity_type=CellMorphology,\n",
     "#     name=\"my-morphology.h5\",\n",
     "#     storage_path=\"path/to/morph.h5\",\n",
     "#     storage_type=\"aws_s3_open\",\n",
