Allow to init CellMorphologyProtocol directly

--- a/examples/02_morphology.ipynb
+++ b/examples/02_morphology.ipynb
@@ -22,7 +22,6 @@
     "    CellMorphology,\n",
     "    CellMorphologyProtocol,\n",
     "    Contribution,\n",
-    "    DigitalReconstructionCellMorphologyProtocol,\n",
     "    MTypeClass,\n",
     "    MTypeClassification,\n",
     "    Organization,\n",
@@ -32,6 +31,7 @@
     "    Subject,\n",
     ")\n",
     "from entitysdk.types import (\n",
+    "    CellMorphologyGenerationType,\n",
     "    CellMorphologyProtocolDesign,\n",
     "    SlicingDirectionType,\n",
     ")"
@@ -195,14 +195,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "morphology_protocol = DigitalReconstructionCellMorphologyProtocol(\n",
+    "morphology_protocol = CellMorphologyProtocol(\n",
+    "  generation_type=CellMorphologyGenerationType.digital_reconstruction,\n",
     "  protocol_document=\"https://example.com/\",\n",
     "  protocol_design=CellMorphologyProtocolDesign.cell_patch,\n",
     "  slicing_thickness=20.0,\n",
     "  slicing_direction=SlicingDirectionType.horizontal,\n",
     ")\n",
+    "rprint(morphology_protocol.__class__.__name__)\n",
     "morphology_protocol = client.register_entity(morphology_protocol)\n",
     "rprint(morphology_protocol)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff0d1d01",
+   "metadata": {},
+   "source": [
+    "### Optional, list morphology protocols"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71818153",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "protocols = client.search_entity(entity_type=CellMorphologyProtocol).all()\n",
+    "rprint(protocols)"
    ]
   },
   {
