Update Cell Morphology model (#126)
* Update Cell Morphology model

* Update notebooks and other fixes

* Update server schema

* Cleanup notebook output

* Update CellMorphologyProtocol docstring

* Allow to init CellMorphologyProtocol directly (#127)

* Update server schema with entitycore 2025.9.7

--- a/examples/04_simulation_campaign.ipynb
+++ b/examples/04_simulation_campaign.ipynb
@@ -111,7 +111,13 @@
     "    for i in range(5)\n",
     "]\n",
     "simulation_results = [\n",
-    "    client.register_entity(models.SimulationResult(name=f\"result-{i}\", description=f\"result-{i}\"))\n",
+    "    client.register_entity(\n",
+    "        models.SimulationResult(\n",
+    "            name=f\"result-{i}\",\n",
+    "            description=f\"result-{i}\",\n",
+    "            simulation_id=simulations[i].id,\n",
+    "        )\n",
+    "    )\n",
     "    for i in range(5)\n",
     "]"
    ]
@@ -326,7 +332,13 @@
    "outputs": [],
    "source": [
     "results = [\n",
-    "    client.register_entity(models.SimulationResult(name=f\"result-{i}\", description=f\"result-{i}\"))\n",
+    "    client.register_entity(\n",
+    "        models.SimulationResult(\n",
+    "            name=f\"result-{i}\",\n",
+    "            description=f\"result-{i}\",\n",
+    "            simulation_id=simulations[i].id,\n",
+    "        )\n",
+    "    )\n",
     "    for i in range(5)\n",
     "]"
    ]
@@ -369,14 +381,6 @@
    "source": [
     "rprint(updated_executions)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b3260f79-5852-4e61-923f-4325e030fc71",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
