--- a/examples/02_morphology.ipynb
+++ b/examples/02_morphology.ipynb
@@ -19,14 +19,21 @@
     "from entitysdk.models import (\n",
     "    BrainLocation,\n",
     "    BrainRegion,\n",
+    "    CellMorphology,\n",
+    "    CellMorphologyProtocol,\n",
     "    Contribution,\n",
     "    MTypeClass,\n",
     "    MTypeClassification,\n",
     "    Organization,\n",
-    "    ReconstructionMorphology,\n",
     "    Role,\n",
     "    Species,\n",
     "    Strain,\n",
+    "    Subject,\n",
+    ")\n",
+    "from entitysdk.types import (\n",
+    "    CellMorphologyGenerationType,\n",
+    "    CellMorphologyProtocolDesign,\n",
+    "    SlicingDirectionType,\n",
     ")"
    ]
   },
@@ -132,6 +139,95 @@
   },
   {
    "cell_type": "markdown",
+   "id": "65bea11e",
+   "metadata": {},
+   "source": [
+    "### Create and register a new subject"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "40772ff8",
+   "metadata": {},
+   "source": [
+    "Subjects should be reused if possible, but they can be created when needed."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c78f0e4d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "subject = Subject(\n",
+    "    name=\"my-subject-for-morphology\",\n",
+    "    description=\"my-subject-description\",\n",
+    "    sex=\"male\",\n",
+    "    species=species,\n",
+    "    strain=strain,\n",
+    ")\n",
+    "\n",
+    "subject = client.register_entity(subject)\n",
+    "rprint(subject)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "62e916c9",
+   "metadata": {},
+   "source": [
+    "### Create and register a new morphology protocol"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b2dacaf",
+   "metadata": {},
+   "source": [
+    "Morphology protocols should be reused if possible, but they can be created when needed."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5200e8cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "morphology_protocol = CellMorphologyProtocol(\n",
+    "  generation_type=CellMorphologyGenerationType.digital_reconstruction,\n",
+    "  protocol_document=\"https://example.com/\",\n",
+    "  protocol_design=CellMorphologyProtocolDesign.cell_patch,\n",
+    "  slicing_thickness=20.0,\n",
+    "  slicing_direction=SlicingDirectionType.horizontal,\n",
+    ")\n",
+    "rprint(morphology_protocol.__class__.__name__)\n",
+    "morphology_protocol = client.register_entity(morphology_protocol)\n",
+    "rprint(morphology_protocol)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff0d1d01",
+   "metadata": {},
+   "source": [
+    "### Optional, list morphology protocols"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71818153",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "protocols = client.search_entity(entity_type=CellMorphologyProtocol).all()\n",
+    "rprint(protocols)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a0193055-3448-4d1c-99cc-4d953727ef4e",
    "metadata": {},
    "source": [
@@ -150,15 +246,15 @@
     "    y=1173.8499755859375,\n",
     "    z=4744.60009765625,\n",
     ")\n",
-    "morphology = ReconstructionMorphology(\n",
+    "morphology = CellMorphology(\n",
+    "    cell_morphology_protocol=morphology_protocol,\n",
     "    name=\"my-morph\",\n",
     "    description=\"A morphology\",\n",
-    "    species=species,\n",
-    "    strain=strain,\n",
+    "    subject=subject,\n",
     "    brain_region=brain_region,\n",
     "    location=brain_location,\n",
     "    legacy_id=None,\n",
-    "    authorized_public=True,\n",
+    "    authorized_public=False,\n",
     ")"
    ]
   },
@@ -188,6 +284,16 @@
    "outputs": [],
    "source": [
     "registered = client.register_entity(entity=morphology)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6b029401",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rprint(registered)"
    ]
   },
   {
@@ -274,7 +380,7 @@
     "    # use a filepath to register first asset\n",
     "    asset1 = client.upload_file(\n",
     "        entity_id=registered.id,\n",
-    "        entity_type=ReconstructionMorphology,\n",
+    "        entity_type=CellMorphology,\n",
     "        file_path=file1,\n",
     "        file_content_type=\"application/x-hdf5\",\n",
     "        asset_label=\"morphology\",\n",
@@ -286,7 +392,7 @@
     "\n",
     "    asset2 = client.upload_content(\n",
     "        entity_id=registered.id,\n",
-    "        entity_type=ReconstructionMorphology,\n",
+    "        entity_type=CellMorphology,\n",
     "        file_content=buffer,\n",
     "        file_name=\"buffer.swc\",\n",
     "        file_content_type=\"application/swc\",\n",
@@ -311,7 +417,7 @@
    "outputs": [],
    "source": [
     "# with assets and mtypes\n",
-    "fetched = client.get_entity(entity_id=registered.id, entity_type=ReconstructionMorphology)"
+    "fetched = client.get_entity(entity_id=registered.id, entity_type=CellMorphology)"
    ]
   },
   {
@@ -370,7 +476,7 @@
     "\n",
     "rprint(deleted_asset)\n",
     "\n",
-    "fetched = client.get_entity(entity_id=registered.id, entity_type=ReconstructionMorphology)\n",
+    "fetched = client.get_entity(entity_id=registered.id, entity_type=CellMorphology)\n",
     "rprint(fetched.assets)"
    ]
   },
@@ -390,7 +496,7 @@
    "outputs": [],
    "source": [
     "hits = client.search_entity(\n",
-    "    entity_type=ReconstructionMorphology,\n",
+    "    entity_type=CellMorphology,\n",
     "    query={\"name__ilike\": \"my-morph\", \"page\": 1, \"page_size\": 2},\n",
     "    limit=None,\n",
     ").all()\n",
@@ -426,7 +532,7 @@
     "## register a file\n",
     "# asset = client.register_asset(\n",
     "#     entity_id=registered.id,\n",
-    "#     entity_type=ReconstructionMorphology,\n",
+    "#     entity_type=CellMorphology,\n",
     "#     name=\"my-morphology.h5\",\n",
     "#     storage_path=\"path/to/morph.h5\",\n",
     "#     storage_type=\"aws_s3_open\",\n",
@@ -458,22 +564,8 @@
   }
  ],
  "metadata": {
-  "kernelspec": {
-   "display_name": "entitysdk",
-   "language": "python",
-   "name": "python3"
-  },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "name": "python"
   }
  },
  "nbformat": 4,
