--- a/examples/03_circuit.ipynb
+++ b/examples/03_circuit.ipynb
@@ -14,7 +14,7 @@
     "from rich import print as rprint\n",
     "from utils import create_mock_circuit_dir\n",
     "\n",
-    "from entitysdk import Client, ProjectContext, models\n",
+    "from entitysdk import Client, ProjectContext, models, types\n",
     "\n",
     "entitycore_api_url = \"http://127.0.0.1:8000\"\n",
     "project_context = ProjectContext(\n",
@@ -135,6 +135,7 @@
     "        entity_id=registered_circuit.id,\n",
     "        entity_type=models.Circuit,\n",
     "        name=\"circuit\",\n",
+    "        label=types.AssetLabel.sonata_circuit,\n",
     "        paths=files,\n",
     "    )"
    ]
@@ -225,22 +226,8 @@
   }
  ],
  "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
-   "name": "python3"
-  },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "name": "python"
   }
  },
  "nbformat": 4,
