model, server schemas and examples updated

--- a/examples/04_simulation_campaign.ipynb
+++ b/examples/04_simulation_campaign.ipynb
@@ -104,6 +104,7 @@
     "            name=f\"sim-{i}\",\n",
     "            description=f\"sim-{i}\",\n",
     "            scan_parameters={\"foo\": \"bar\"},\n",
+    "            number_neurons=5,\n",
     "            entity_id=circuit.id,\n",
     "            simulation_campaign_id=campaign.id,\n",
     "        )\n",
@@ -246,6 +247,7 @@
     "            name=f\"sim-{i}\",\n",
     "            description=f\"sim-{i}\",\n",
     "            scan_parameters={\"foo\": \"bar\"},\n",
+    "            number_neurons=5,\n",
     "            entity_id=circuit.id,\n",
     "            simulation_campaign_id=campaign.id,\n",
     "        )\n",
