Fix tests for missing attributes

--- a/examples/02_morphology.ipynb
+++ b/examples/02_morphology.ipynb
@@ -201,6 +201,8 @@
     "  protocol_design=CellMorphologyProtocolDesign.cell_patch,\n",
     "  slicing_thickness=20.0,\n",
     "  slicing_direction=SlicingDirectionType.horizontal,\n",
+    "  name=\"my_name\",\n",
+    "  description=\"my_description\",\n",
     ")\n",
     "rprint(morphology_protocol.__class__.__name__)\n",
     "morphology_protocol = client.register_entity(morphology_protocol)\n",
